--- a/FinalGroupProject - CS 2141/src/finalgroupproject/cs/pkg2141/GUI.form
+++ b/FinalGroupProject - CS 2141/src/finalgroupproject/cs/pkg2141/GUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -28,7 +28,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="1" max="32767" attributes="0"/>
+          <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -52,9 +52,7 @@
                               <Component id="albumLabel" alignment="0" max="32767" attributes="0"/>
                               <Component id="genreLabel" alignment="0" max="32767" attributes="0"/>
                               <Component id="labelLabel" alignment="0" max="32767" attributes="0"/>
-                              <Component id="reviewcommLabel" alignment="0" max="32767" attributes="0"/>
                               <Component id="dateLabel" alignment="0" max="32767" attributes="0"/>
-                              <Component id="releasedescLabel" alignment="0" pref="99" max="32767" attributes="0"/>
                               <Component id="artistLabel" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
@@ -64,9 +62,7 @@
                               <Component id="albumTextField" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
                               <Component id="genreTextField" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
                               <Component id="labelTextField" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
-                              <Component id="releasedescTextField" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
                               <Component id="dateTextField" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
-                              <Component id="reviewcommTextField" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" attributes="0">
@@ -79,18 +75,12 @@
                           </Group>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="formatLabel" alignment="0" max="32767" attributes="0"/>
-                              <Component id="countryLabel" alignment="0" max="32767" attributes="0"/>
-                          </Group>
+                          <Component id="countryLabel" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="countryTextField" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
-                              <Component id="formatTextField" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="countryTextField" min="-2" pref="200" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
-                          <Component id="reviewLabel" max="32767" attributes="0"/>
+                          <Component id="reviewLabel" pref="99" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                           <Component id="reviewTextField" min="-2" pref="200" max="-2" attributes="0"/>
                       </Group>
@@ -103,10 +93,9 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jScrollPane2" alignment="0" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="artistTextField" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -139,30 +128,15 @@
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="formatTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="formatLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="dateTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="dateLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="releasedescTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="releasedescLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="reviewTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="reviewLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="reviewcommTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="reviewcommLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
                           <Component id="addButton" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="updateButton" min="-2" max="-2" attributes="0"/>
@@ -170,10 +144,10 @@
                           <Component id="deleteButton" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="searchButton" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="0" pref="435" max="32767" attributes="0"/>
                       </Group>
+                      <Component id="jScrollPane2" alignment="0" min="-2" pref="729" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -370,17 +344,6 @@
             <Property name="text" type="java.lang.String" value="Genre"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="reviewcommTextField">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="reviewcommTextFieldActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JLabel" name="reviewcommLabel">
-          <Properties>
-            <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="Review Com."/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JLabel" name="dateLabel">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="4"/>
@@ -392,22 +355,6 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="dateTextFieldActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JLabel" name="releasedescLabel">
-          <Properties>
-            <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="Release Desc."/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="releasedescTextField">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="releasedescTextFieldActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JTextField" name="formatTextField">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="formatTextFieldActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JTextField" name="countryTextField">
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="countryTextFieldActionPerformed"/>
@@ -417,12 +364,6 @@
           <Properties>
             <Property name="horizontalAlignment" type="int" value="4"/>
             <Property name="text" type="java.lang.String" value="Country"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="formatLabel">
-          <Properties>
-            <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="Format"/>
           </Properties>
         </Component>
       </SubComponents>
